- New: Can list elements (invoices, orders or proposals on a particular
  user contact). This allow to view a "basket" of its elements.
- New: Add bank account on payment list of invoice card.
- New: Cloning project allow to clones task, notes, files, contacts. 
- New: Enhance default style.
- New: Can edit and resiliate member status from list.

For developers:
- New: A module can overwrite templates parts.
- New: Can add a link on title field of added dictionnary.
- New: Uniformize code.


***** ChangeLog for 3.2.0 compared to 3.1.2 *****
WARNING: PHP lower than 5.x are no more supported.
WARNING: Because of a major datastructure change onto supplier prices tables, be aware
to make a backup of your database before making upgrade.

For users:
- New: Each user can remove/add its own boxes.
- New: Add signature at end of predefined email text.
- New: Can use personalized fields of products/services.
- New: Can attach files on social contributions.
- New: Show payments terms and conditions onto muscadet template.
- New: Can open back a closed commercial proposal.
- New: show thirdparty barcode on main tab.
- New: Can input note (private and public) during note and expenses creation.
- New: Print ticket show invoice ref into POS module.
- New: Can edit customer discounts from invoice create and edit card.
- New: task #11243: Show quantity into stocks for each sub-products into the sub-product tab.
- New: task #10500: Option to choose if professional id are unique.
- New: Add hidden option FOURN_PRODUCT_AVAILABILITY.
- New: task #11123: Add best supplier price.
- New: Enhancement in styles.
- New: Can conciliate several lines in one operation.
- New: task #11289 : Modify third party accountancy code generator aquarium.
- New: task #10606 : more comprehensive message error.
- New: task #11278 : Option into point of sale module to add services in list.
- New: task #11261 : Add an entry into menu called "New shipment".